add Delete handler and swag docs
