# docs/swagger.yaml
@@ -85,4 +85,27 @@ paths:
       summary: Create Task
       tags:
       - tasks
+  /tasks/{id}:
+    delete:
+      description: Delete a task
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Delete Task
+      tags:
+      - tasks
 swagger: "2.0"
